--- a/styles.css
+++ b/styles.css
@@ -261,16 +261,17 @@ img {
 
 .about__subtitle {
   margin-bottom: var(--mb-2);
+  
 }
 
-.about__img {
+/* .about__img {
   justify-self: center;
 }
 
 .about__img img {
   width: 200px;
   border-radius: .5rem;
-}
+} */
 
 /* ===== SKILLS =====*/
 .skills__container {
@@ -320,43 +321,29 @@ img {
 }
 
 .skills__html {
-  width: 95%;
+  width: 85%;
 }
 
 .skills__css {
-  width: 85%;
-}
-
-.skills__js {
   width: 65%;
 }
 
-.skills__ux {
-  width: 85%;
+.skills__js {
+  width: 25%;
+}
+
+.skills__java {
+  width: 55%;
+}
+
+.skills__python {
+  width: 65%;
 }
 
 .skills__img {
   border-radius: .5rem;
 }
 
-/* ===== WORK =====*/
-.work__container {
-  row-gap: 2rem;
-}
-
-.work__img {
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-  border-radius: .5rem;
-  overflow: hidden;
-}
-
-.work__img img {
-  transition: 1s;
-}
-
-.work__img img:hover {
-  transform: scale(1.1);
-}
 
 /* ===== CONTACT =====*/
 .contact__input {
