--- a/styles.css
+++ b/styles.css
@@ -264,14 +264,14 @@ img {
   
 }
 
-/* .about__img {
+.about__img {
   justify-self: center;
 }
 
 .about__img img {
   width: 200px;
   border-radius: .5rem;
-} */
+}
 
 /* ===== SKILLS =====*/
 .skills__container {
